Update profiles to add grids and basic css changes

--- a/booshfm_site/templates/base.html
+++ b/booshfm_site/templates/base.html
@@ -37,41 +37,18 @@
         <header class="mdl-layout__header">
           <div class="mdl-layout__header-row">
             <!-- Title -->
-            <span class="mdl-layout-title">
-              {% block layout_title %}
-                  {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
-                  {% with self.get_site.site_name as site_name %}
-                      {% if site_name %}- {{ site_name }}{% endif %}
-                  {% endwith %}
-              {% endblock %}
-            </span>
+            <span class="mdl-layout-title"></span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
-              <a class="mdl-navigation__link" href="">Link</a>
-              <a class="mdl-navigation__link" href="">Link</a>
-              <a class="mdl-navigation__link" href="">Link</a>
-              <a class="mdl-navigation__link" href="">Link</a>
+              <a class="mdl-navigation__link" href="/">Home</a>
+              <a class="mdl-navigation__link" href="/schedule">Schedule</a>
+              <a class="mdl-navigation__link" href="/profiles">Profiles</a>
+              <a class="mdl-navigation__link" href="/shows">Shows</a>
             </nav>
           </div>
         </header>
-        <div class="mdl-layout__drawer">
-          <span class="mdl-layout-title">
-            {% block drawer_title %}
-                {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}
-                {% with self.get_site.site_name as site_name %}
-                    {% if site_name %}- {{ site_name }}{% endif %}
-                {% endwith %}
-            {% endblock %}
-          </span>
-          <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-            <a class="mdl-navigation__link" href="">Link</a>
-          </nav>
-        </div>
         <main class="mdl-layout__content">
           <div class="page-content">
             {% wagtailuserbar %}
