--- a/profiles/templates/profiles/profiles_index_page.html
+++ b/profiles/templates/profiles/profiles_index_page.html
@@ -9,11 +9,26 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
-    {% for post in profilepages %}
-      {% with post=post.specific %}
-        <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
-        {{ post.specific.name }}
-        {{ post.specific.bio|richtext }}
-    {% endwith %}
+    <div class="mdl-grid">
+    {% for profile in profilepages %}
+      <div class="mdl-cell mdl-cell--4-col">
+        {% with profile=profile.specific %}
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">{{ profile.title }}</h2>
+          </div>
+          <div class="mdl-card__supporting-text">
+            <h5>{{ profile.specific.name }}<h5>
+            {{ profile.specific.bio|richtext }}
+          </div>
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% pageurl profile %}">
+              View {{ profile.specific.title}}
+            </a>
+          </div>
+        </div>
+          {% endwith %}
+      </div>
     {% endfor %}
+    </div>
 {% endblock %}
