--- a/shows/templates/shows/show_index_page.html
+++ b/shows/templates/shows/show_index_page.html
@@ -9,14 +9,29 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
-    {% for post in showpages %}
-      {% with post=post.specific %}
-        <h2><a href="{% pageurl post %}">{{ post.showname }}</a></h2>
+    <div class="mdl-grid">
+    {% for show in showpages %}
+      <div class="mdl-cell mdl-cell--4-col">
+        {% with show=show.specific %}
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">{{ show.showname }}</h2>
+          </div>
 
-        <p>{{ post.showname }}</p>
-        {{ post.specific.showname }}
-        {{ post.specific.showdescription|richtext }}
-      {% endwith %}
+          <div class="mdl-card__supporting-text">
+            <h5>{{ show.specific.showname }}<h5>
+            {{ show.specific.showdescription|richtext }}
+          </div>
+
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% pageurl show %}">
+              View {{ show.specific.showname }}
+            </a>
+          </div>
+
+        </div>
+        {% endwith %}
+      </div>
     {% endfor %}
-
+    </div>
 {% endblock %}
