--- a/booshfm_site/templates/base.html
+++ b/booshfm_site/templates/base.html
@@ -24,6 +24,7 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link href="/static/css/airtime-widgets.css" rel="stylesheet" type="text/css" />
 
         <link href="{% sass_src 'scss/index.scss' %}" rel="stylesheet" type="text/css" />
 
@@ -32,7 +33,7 @@
         {% endblock %}
     </head>
 
-    <body class="layout-transparent {% block body_class %}{% endblock %}">
+    <body style="{% block body_style %}{% endblock %}" class="{% block body_class %}{% endblock %}">
       <!-- Always shows a header, even in smaller screens. -->
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header mdl-layout__header--transparent">
@@ -40,6 +41,7 @@
             <!-- Title -->
             <span class="mdl-layout-title">
               <img src="/static/images/boosh_icon_245x300.png" class="logo">
+              <span class="title-txt">boosh.fm</span>
             </span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
@@ -72,6 +74,54 @@
         {# Global javascript #}
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <script type="text/javascript" src="{% static 'js/booshfm_site.js' %}"></script>
+        <script src="/static/js/jquery-1.6.1.min.js" type="text/javascript"></script>
+        <script src="/static/js/jquery-ui-1.8.10.custom.min.js" type="text/javascript"></script>
+        <script src="/static/js/jquery.showinfo.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+         $(document).ready(function() {
+            function functionToLoadFile(){
+              var successFn = function(data) {
+                var myvar = data;
+                var parts = myvar.split(/\-/);
+                var songtitle = parts[1];
+                var songartist = parts[0];
+
+                $('#fullID').html(myvar);
+                $('#songtitle').html(songtitle);
+                $('#songartist').html(songartist);
+                setTimeout(functionToLoadFile, 5000);
+              }
+              $.ajax({
+                 url: 'https://boosh.fm/current',
+                 type: 'GET',
+                 crossDomain: true,
+                 success: successFn,
+                 error: function (xhr, status) { console.log('err: ', xhr, status);  }
+              });
+            }
+
+            var fakeFn = function() {
+              $('#songtitle').html('Big booty girls');
+              $('#songartist').html('DawnDayNight');
+            }
+            setTimeout(fakeFn, 10);
+            // setTimeout(functionToLoadFile, 10);
+        });
+        </script>
+        <script type="text/javascript">
+          $(document).ready(function() {
+              $("#scheduleTabs").airtimeWeekSchedule({
+                  sourceDomain:"https://admin.boosh.fm",
+                  dowText:{monday:"Monday", tuesday:"Tuesday", wednesday:"Wednesday", thursday:"Thursday", friday:"Friday", saturday:"Saturday", sunday:"Sunday"},
+                  miscText:{time:"Time (UTC)", programName:"Show", details:"Details", readMore:"Show Profile"},
+                  updatePeriod: 600 //seconds
+              });
+              var d = new Date().getDay();
+              $('#scheduleTabs').tabs({selected: d === 0 ? 6 : d-1, fx: { opacity: 'toggle' }});
+
+          });
+        </script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
