--- a/profiles/templates/profiles/profiles_index_page.html
+++ b/profiles/templates/profiles/profiles_index_page.html
@@ -2,7 +2,8 @@
 
 {% load wagtailcore_tags %}
 
-{% block body_class %}template-profilesindexpage{% endblock %}
+{% block body_class %}layout-transparent template-profilesindexpage{% endblock %}
+{% block body_style %}background: url('/static/images/dark_triangles.png') repeat;{% endblock %}
 
 {% block content %}
     <h2>{{ page.title }}</h2>
