--- a/booshfm_site/static/scss/mdl/_variables.scss
+++ b/booshfm_site/static/scss/mdl/_variables.scss
@@ -100,7 +100,7 @@ $trim-color-classes: false !default;
 // $color-accent: $palette-pink-A200 !default;
 $color-primary: '9,98,119'  !default;
 $color-primary-dark: '1,47,60' !default;
-$color-accent: $palette-pink-A200 !default;
+$color-accent: '9,98,119' !default;
 
 // Our primary is dark, so use $color-dark-contrast for overlaid text.
 $color-primary-contrast: $color-dark-contrast !default;
