--- a/booshfm_site/templates/base.html
+++ b/booshfm_site/templates/base.html
@@ -25,7 +25,7 @@
         {# Global stylesheets #}
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="/static/css/airtime-widgets.css" rel="stylesheet" type="text/css" />
-
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/SocialIcons/1.0.1/soc.min.css">
         <link href="{% sass_src 'scss/index.scss' %}" rel="stylesheet" type="text/css" />
 
         {% block extra_css %}
