--- a/profiles/templates/profiles/profiles_index_page.html
+++ b/profiles/templates/profiles/profiles_index_page.html
@@ -6,7 +6,7 @@
 {% block body_style %}background: url('/static/images/dark_triangles.png') repeat;{% endblock %}
 
 {% block content %}
-    <h2>{{ page.title }}</h2>
+    <!-- <h2>{{ page.title }}</h2> -->
     <!-- <div class="intro">{{ page.intro|richtext }}</div> -->
 
     <div class="mdl-grid">
