--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -22,6 +22,11 @@
           </div>
         </div>
       </div>
+      <div class="mdl-cell mdl-cell--12-col social">
+        <a href="https://mixcloud.com/booshfm">Mixcloud</a> /
+        <a href="https://facebook.com/boosh.fm">Facebook</a> / 
+        <a href="https://twitter.com/booshfm">Twitter</a>
+      </div>
     </div>
     <!-- {{ page.body|richtext }} -->
 {% endblock %}
