--- a/shows/templates/shows/show_index_page.html
+++ b/shows/templates/shows/show_index_page.html
@@ -6,9 +6,8 @@
 {% block body_style %}background: url('/static/images/dark_triangles.png') repeat;{% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-
-    <div class="intro">{{ page.intro|richtext }}</div>
+    <!-- <h1>{{ page.title }}</h1> -->
+    <!-- <div class="intro">{{ page.intro|richtext }}</div> -->
 
     <div class="mdl-grid">
     {% for show in showpages %}
