--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,6 +3,7 @@
 {% load wagtailcore_tags %}
 
 {% block body_class %}layout-transparent template-homepage{% endblock %}
+<!-- TODO: Insert image from current show playing here, else use default!  -->
 {% block body_style %}background: url('/static/images/blue_london_1920x1080.jpg') center / cover;{% endblock %}
 
 {% block content %}
@@ -24,7 +25,7 @@
       </div>
       <div class="mdl-cell mdl-cell--12-col social">
         <a href="https://mixcloud.com/booshfm">Mixcloud</a> /
-        <a href="https://facebook.com/boosh.fm">Facebook</a> / 
+        <a href="https://facebook.com/boosh.fm">Facebook</a> /
         <a href="https://twitter.com/booshfm">Twitter</a>
       </div>
     </div>
