--- a/profiles/templates/profiles/profiles_index_page.html
+++ b/profiles/templates/profiles/profiles_index_page.html
@@ -6,7 +6,8 @@
 {% block body_style %}background: url('/static/images/dark_triangles.png') repeat;{% endblock %}
 
 {% block content %}
-    <!-- <h2>{{ page.title }}</h2> -->
+<div class="profiles-index-page">
+    <h1>{{ page.title }}</h1>
     <!-- <div class="intro">{{ page.intro|richtext }}</div> -->
 
     <div class="mdl-grid">
@@ -14,21 +15,25 @@
       <div class="mdl-cell mdl-cell--4-col">
         {% with profile=profile.specific %}
         <div class="card-square mdl-card mdl-shadow--2dp">
-          <div class="mdl-card__title mdl-card--expand">
+          <!-- TODO: Put dynamic image in below  -->
+          <div
+            style="background:url('/static/images/blue_london_1920x1080.jpg') bottom right 100% no-repeat #46B6AC;"
+            class="mdl-card__title mdl-card--expand">
             <h2 class="mdl-card__title-text">{{ profile.title }}</h2>
           </div>
           <div class="mdl-card__supporting-text">
             <h5>{{ profile.specific.name }}<h5>
             {{ profile.specific.bio|richtext }}
           </div>
-          <div class="mdl-card__actions mdl-card--border">
+          <!-- <div class="mdl-card__actions mdl-card--border">
             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% pageurl profile %}">
               View {{ profile.specific.title}}
             </a>
-          </div>
+          </div> -->
         </div>
           {% endwith %}
       </div>
     {% endfor %}
     </div>
+</div>
 {% endblock %}
