Don't attempt to parse artist/songname

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -13,7 +13,7 @@
         <div class="now-playing">
           <h3>Now playing:</h3>
           <h1>
-            <span id="songtitle"></span> - <span id="songartist"></span>
+            <span id="fullID"></span>
           </h1>
           <div class="audio-player">
             <audio controls="" preload="none">
