Add Open Graph meta tags

--- a/booshfm_site/templates/base.html
+++ b/booshfm_site/templates/base.html
@@ -21,7 +21,12 @@
         </title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+        <meta property="og:image" content="https://boosh.fm/static/images/boosh_facebook_meta.png" />
+        <meta property="og:description" content="Bass Heavy Business" />
+        <meta property="og:url" content="https://boosh.fm" />
+        <meta property="og:title" content="Boosh.FM" />
+        <meta property="fb:app_id" content="129743717549262" />
+        
         {# Global stylesheets #}
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="/static/css/airtime-widgets.css" rel="stylesheet" type="text/css" />
