--- a/static/scss/index.css
+++ b/static/scss/index.css
@@ -11226,7 +11226,7 @@ h1 {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: url("/static/images/blue_london_1920x1080.jpg") center/cover;
+  background: url("/static/images/bg/_IGP6062_1920.jpg) center/cover;
   background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.9) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(0%, rgba(0, 0, 0, 0.05)), color-stop(100%, rgba(0, 0, 0, 0.9)));
   background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.9) 100%);
